# rust-tarsier

./: .gitignore  Cargo.toml  README.md
shaders/: shader.frag  shader.vert
src/: base.rs  main.rs  objects.rs
src/objects/: base.rs  buffer.rs  context.rs  model.rs  texture.rs  uniform_buffer_object.rs  vertex.rs
