[package]
name = "rust-tarsier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.2", default-features = false, features = ["linked", "debug"] }
ash-window = "0.12.0"
image = "0.24.5"
nalgebra-glm = "0.18.0"
raw-window-handle = "0.5.0"
tobj = "3.2.4"
winit = "0.28.1"
